--- a/css/web-countdown-timer-styles.css
+++ b/css/web-countdown-timer-styles.css
@@ -51,3 +51,8 @@
     color : #000000;
 }
 
+.tbl_exhaustedTimersInfo {
+ border-spacing: 10px;
+ border-collapse: separate;
+ text-align : center;
+}
