--- a/css/web-countdown-timer-styles.css
+++ b/css/web-countdown-timer-styles.css
@@ -1,9 +1,11 @@
 .bigTimer {
-
     padding-left: 30%;
     font-size: 300%;
 }
 
+#div_timersConfiguration label{
+    margin-right: 25px;
+}
 
 .div_timer_configuration_label_0{
     background :  #cce6ff;
@@ -55,4 +57,30 @@
  border-spacing: 10px;
  border-collapse: separate;
  text-align : center;
+}
+
+table td, th{
+    padding-left: 15px;
+}
+
+.divBoundary {
+    border: 1px solid #ccc2c2;
+    padding: 5px;
+    display: flex;
+    gap: 10px; /* Add space between buttons */
+}
+
+.divBoundary input[type="button"] {
+    flex: 1; /* Make buttons take equal width */
+    margin: 0; /* Remove default margin */
+}
+
+.btnSmall {
+    height: 30px; /* Maintain consistent height with other buttons */
+    margin: 0; /* Remove default margin */
+    flex: none; /* Override flex property to prevent equal width */
+}
+
+#div_timersConfiguration {
+    margin-top: 10px;
 }
