20231113_2219 Updated custom timer.

--- a/css/web-countdown-timer-styles.css
+++ b/css/web-countdown-timer-styles.css
@@ -84,3 +84,73 @@ table td, th{
 #div_timersConfiguration {
     margin-top: 10px;
 }
+
+main {
+    margin-bottom: 60px;
+}
+
+footer {
+    /*display: flex;*/
+    background: #87ceeb;
+    text-align: center;
+    height: 20px;
+    width: 100vw;
+    padding: 20px;
+    bottom: 0;
+    position: fixed;
+}
+
+.divFooterCenter {
+    display: inline-block;
+    text-align: center;
+    margin: 0 auto;
+}
+
+.divFooterRight {
+    display: inline-block;
+    float: right;
+    margin-right: 80px;
+}
+
+/* CSS styles for the toast */
+.toast {
+    background-color: #fd1000; /* Red background color */
+    color: white;
+    padding: 10px;
+    padding-top: 50px;
+    border-radius: 8px;
+    position: fixed;
+    top: 30%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    z-index: 1000; /* High z-index to overlay other content */
+    text-align: center;
+    font-size: 24px;
+}
+
+.toastCloseButton {
+    position: absolute;
+    top: 5px;
+    right: 5px;
+    cursor: pointer;
+    font-size:16px;
+    color: black;
+}
+
+
+/* Style for the toast content */
+.toast-content {
+    font-size: 16px;
+}
+
+.green {
+    background: #9fff80;
+}
+
+.yellow {
+    background: yellow;
+}
+
+.red {
+    background: red;
+}
